[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/theme/dark_theme.tres" type="Theme" id=1]
[ext_resource path="res://components/elements/styled/icon_button.tscn" type="PackedScene" id=2]
[ext_resource path="res://components/popups/popup_connect.gd" type="Script" id=3]
[ext_resource path="res://assets/icons/icon_128_hide.svg" type="Texture" id=4]

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_color = Color( 0, 0, 0, 0.113725 )
shadow_size = 10
shadow_offset = Vector2( 0, 6 )

[sub_resource type="StyleBoxFlat" id=8]
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color( 0.0588235, 0.2, 0.337255, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4

[node name="ConnectPopup" type="PopupPanel"]
self_modulate = Color( 0.091, 0.11245, 0.13, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1520.0
margin_bottom = -893.0
rect_min_size = Vector2( 400, 150 )
theme = ExtResource( 1 )
custom_styles/panel = SubResource( 7 )
popup_exclusive = true
script = ExtResource( 3 )

[node name="Content" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="Label" type="Label" parent="Content"]
margin_right = 400.0
margin_bottom = 29.0
rect_min_size = Vector2( 100, 29 )
custom_styles/normal = SubResource( 8 )
text = "Connect to Resoto Core"
align = 1

[node name="Margin" type="MarginContainer" parent="Content"]
margin_top = 29.0
margin_right = 400.0
margin_bottom = 305.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 10
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Connect" type="VBoxContainer" parent="Content/Margin"]
margin_left = 20.0
margin_top = 10.0
margin_right = 380.0
margin_bottom = 256.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConnectStatusLabel" type="Label" parent="Content/Margin/Connect"]
unique_name_in_owner = true
margin_right = 360.0
margin_bottom = 60.0
rect_min_size = Vector2( 100, 60 )
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Connecting"
align = 1
valign = 1
autowrap = true

[node name="HSeparator" type="HSeparator" parent="Content/Margin/Connect"]
visible = false
modulate = Color( 1, 1, 1, 0.415686 )
margin_top = 25.0
margin_right = 360.0
margin_bottom = 29.0

[node name="PSK" type="VBoxContainer" parent="Content/Margin/Connect"]
margin_top = 75.0
margin_right = 360.0
margin_bottom = 129.0
custom_constants/separation = 0

[node name="PSKLabel" type="Label" parent="Content/Margin/Connect/PSK"]
margin_right = 360.0
margin_bottom = 21.0
rect_min_size = Vector2( 100, 0 )
text = "PSK:"

[node name="Edit" type="HBoxContainer" parent="Content/Margin/Connect/PSK"]
margin_top = 21.0
margin_right = 360.0
margin_bottom = 54.0

[node name="PSKLineEdit" type="LineEdit" parent="Content/Margin/Connect/PSK/Edit"]
unique_name_in_owner = true
margin_right = 323.0
margin_bottom = 33.0
size_flags_horizontal = 3
secret = true
caret_blink = true
caret_blink_speed = 0.5

[node name="ShowPSKIcon" parent="Content/Margin/Connect/PSK/Edit" instance=ExtResource( 2 )]
unique_name_in_owner = true
margin_left = 327.0
margin_right = 360.0
toggle_mode = true
icon_tex = ExtResource( 4 )

[node name="Adress" type="VBoxContainer" parent="Content/Margin/Connect"]
margin_top = 144.0
margin_right = 360.0
margin_bottom = 198.0
custom_constants/separation = 0

[node name="AdressLabel" type="Label" parent="Content/Margin/Connect/Adress"]
margin_right = 360.0
margin_bottom = 21.0
rect_min_size = Vector2( 100, 0 )
text = "Resoto Core adress:"

[node name="ResotoAdressEdit" type="LineEdit" parent="Content/Margin/Connect/Adress"]
unique_name_in_owner = true
margin_top = 21.0
margin_right = 360.0
margin_bottom = 54.0
size_flags_horizontal = 3
placeholder_text = "e.g. https://localhost:8900"
caret_blink = true
caret_blink_speed = 0.5

[node name="ButtonConnect" type="Button" parent="Content/Margin/Connect"]
unique_name_in_owner = true
margin_top = 213.0
margin_right = 360.0
margin_bottom = 246.0
text = "Connect"

[node name="ConnectDelay" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="ConnectTimeoutTimer" type="Timer" parent="."]

[node name="PingTimer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="about_to_show" from="." to="." method="_on_ConnectPopup_about_to_show"]
[connection signal="text_entered" from="Content/Margin/Connect/PSK/Edit/PSKLineEdit" to="." method="_on_PSKLineEdit_text_entered"]
[connection signal="toggled" from="Content/Margin/Connect/PSK/Edit/ShowPSKIcon" to="." method="_on_ShowPSKIcon_toggled"]
[connection signal="text_entered" from="Content/Margin/Connect/Adress/ResotoAdressEdit" to="." method="_on_ResotoAdressEdit_text_entered"]
[connection signal="pressed" from="Content/Margin/Connect/ButtonConnect" to="." method="_on_ButtonConnect_pressed"]
[connection signal="timeout" from="ConnectDelay" to="." method="_on_ConnectDelay_timeout"]
[connection signal="timeout" from="ConnectTimeoutTimer" to="." method="_on_ConnectTimeoutTimer_timeout"]
[connection signal="timeout" from="PingTimer" to="." method="_on_PingTimer_timeout"]
